plugins {
    id 'java'
}

group = 'com.github.pedrorlmarques'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    mavenCentral()
    maven {
        url 'https://repo.spring.io/libs-milestone'
    }
    maven { url "http://repo.spring.io/snapshot" }
    maven { url "http://repo.spring.io/milestone" }
    maven { url "http://repo.spring.io/release" }
}

dependencies {
    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.0.RELEASE'
    compile group: 'org.springframework.security', name: 'spring-security-test', version: '5.4.1'
    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.4.1'
    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.4.1'

}
